# TensorNTT

./: CMakeLists.txt
data/: combine0time.xlsx  combine1time.py  mergeTime.py  mergeTime.xlsx  tensor0Time.py  tensor0time.xlsx  tensor1Time.py  tensor1time.xlsx  tensor2Time.py  tensor2time.xlsx  tensor3Time.py  tensor3time.xlsx  tensor4Time.py  tensor4time.xlsx  tensor5Time.py  tensor5time.xlsx  tensor6Time.py  tensor6time.xlsx  tensor7Time.py  tensor7time.xlsx  tensor8Time.py  tensor8time.xlsx  test.sh
example/: CMakeLists.txt  merge_example.cu  merge_ntt_cpu_example.cu  tensor_0_example.cu  tensor_1_example.cu  tensor_2_example.cu  tensor_3_example.cu  tensor_4_example.cu  tensor_5_example.cu  tensor_6_example.cu  tensor_7_example.cu  tensor_8_example.cu
report/: ncu1-12.ncu-rep  ncu1-13.ncu-rep  ncu1-14.ncu-rep  ncu1-15.ncu-rep  ncu1-16.ncu-rep  ncu1-17.ncu-rep  ncu1-18.ncu-rep  ncu2-12.ncu-rep  ncu2-13.ncu-rep  ncu2-14.ncu-rep  ncu2-15.ncu-rep  ncu2-16.ncu-rep  ncu2-17.ncu-rep  ncu2-18.ncu-rep  ncu3-12.ncu-rep  ncu3-13.ncu-rep  ncu3-14.ncu-rep  ncu3-15.ncu-rep  ncu3-16.ncu-rep  ncu3-17.ncu-rep  ncu3-18.ncu-rep  report.sh
